fix: topnav visibility on small screens

--- a/css/components/carousel.css
+++ b/css/components/carousel.css
@@ -4,6 +4,7 @@
 @import 'swiper/css/thumbs';
 
 .carousel {
+	@apply mb-10;
 }
 
 .carousel-main {
