--- a/css/components/navigation.css
+++ b/css/components/navigation.css
@@ -1,5 +1,23 @@
 .top-bar {
-	@apply w-full lg:w-80 z-30 absolute top-1 left-0 pl-5 lg:pl-16 pt-3 lg:pt-[10vh];
+	@apply 
+        bg-slate-700 
+        lg:bg-transparent
+        shadow-slate-800 
+        lg:shadow-transparent
+        shadow
+        
+        w-full
+        lg:w-80 
+        z-30 
+        
+        absolute 
+        top-0 
+        left-0 
+        
+        pl-5 
+        lg:pl-16 
+        py-3 
+        lg:pt-[10vh];
 }
 
 .main-navigation {
